--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-    "seed": "npm run build && ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d ./src/db/data-source.ts"
+    "seed": "npm run build && ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d ./src/db/data-source.ts",
+    "db:refresh": "npm run typeorm schema:drop && npm run migration:generate src/db/migrations/NewTables && npm run migration:run && npm run seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
