--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "meilisearch": "^0.40.0",
     "mysql2": "^3.9.7",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
